<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:id="@+id/layout_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_load"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="164dp"
            android:layout_height="154dp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:saveEnabled="false"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <CheckBox
                android:id="@+id/checkBox_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBox_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBox_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HP"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPokemons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:divider="@color/colorAccent"
            android:dividerHeight="2dp"
            android:footerDividersEnabled="true"
            android:visibility="visible"><![CDATA[>

            ]]></androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView_errorConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ERROR: Cache empty, internet connection required."
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Refresh"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>