<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F5F5F5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView_max_attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/max_attack"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView_max_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/max_defense"
                    android:textColor="?android:attr/colorPrimaryDark"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView_max_hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/max_hp"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>